fix z-index > 0

--- a/css/index.css
+++ b/css/index.css
@@ -24,6 +24,7 @@ padding: 25px;
   /*width: 500px*/
   /*padding: 25px;*/
   background-color: #f5f6fa;
+  z-index: 4;
 }
 
 
@@ -32,7 +33,7 @@ padding: 25px;
   margin: auto;
   width: 500px
   padding: 16px;
-  z-index: -1;
+  z-index: 1;
 }
 
 /* The sticky class is added to the header with JS when it reaches its scroll position */
@@ -57,7 +58,7 @@ padding: 25px;
     display: block;
     padding-right: 10px;
     padding-left: 10px;
-    z-index: -1;
+    z-index: 1;
     
 }
 
@@ -65,7 +66,7 @@ padding: 25px;
     display: inline-block;
     /*filter: invert(100%); */
     /*color: #000000;*/
-    z-index: -1;
+    z-index: 1;
     /*border-radius: 3px;*/
 }
 
@@ -82,7 +83,7 @@ padding: 25px;
     color: #212121;
     border-radius: 3px;
     padding: 5px 10px 5px 10px;
-    z-index: -1;
+    z-index: 1;
 }
 
 .links:hover {
@@ -219,19 +220,19 @@ padding: 25px;
     font-weight: 600;
     color: black;
     margin-top: 15px;
-    z-index: -1;
+    z-index: 1;
 }
 
 #contactButton p {
     margin: 0px;
     margin-top: -1px;
-    z-index: -1;
+    z-index: 1;
 }
 
 #contactButton:hover {
     color: white;
     background-color: black;
-    z-index: -1;
+    z-index: 1;
 }
 /* Colors */
 
